fixed z-index in mobile navlist

--- a/src/scss/blocks/_navbar.scss
+++ b/src/scss/blocks/_navbar.scss
@@ -56,7 +56,7 @@
 
 .nav__list--mobile{
     text-align: center;
-    width: 80%;
+    width: 90%;
     font-size: 1.2rem;
     background-color: $turquoise;
     position: fixed;
@@ -65,6 +65,7 @@
     transition: 0.5s;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
+    z-index: 5;
 
     li{
         padding-inline: 20px;
@@ -74,5 +75,9 @@
             color: $white;
             font-family: $font-main;
         }
+    }
+
+    @media (min-width: 550px) {
+        width: 65%;
     }
 }
